# hprc-data-explorer

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  README.md  cc-data.humanpangenome.dev.clevercanary.com  cgl-data.humanpangenome.org  eslint.config.mjs  jest.config.js  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml  setup_poetry_pyenv.sh  tsconfig.json
.github/workflows/: release-please.yml  run-checks.yml  run-playwright-tests.yml
app/components/: index.ts
app/config/: config.ts
app/routes/: constants.ts
catalog/: README.md  alignments.json  annotations.json  assemblies.json
catalog-build/: .gitignore  README.md  alignments-columns.py  build-annotations.py  build-assemblies.py  build-catalog.ts  build-raw-sequencing-files.py  build-sequencing-data.py  build_annotations.py  build_assemblies.py  build_help.py  build_sequencing_data.py  constants.ts  entities.ts  requirements.txt
catalog-build/source/: alignments.csv  annotations.csv  assemblies.csv  (+2 more)
catalog-schema/: hprc-catalog-schema.yaml  lint.sh  validate-schema.py
e2e/: hprc-default-filters.spec.ts  hprc-filters.spec.ts  hprc-sort.spec.ts  hprc-table.spec.ts  hprc-tabs.ts  hprc-urls.spec.ts  smoke-test.spec.ts  test-readme.md  testFunctions.ts  testInterfaces.ts
files/: build-annotation-data.py  build-annotations-data.py  build-assemblies-data.py  build-catalog.ts  build-raw-sequencing-files.py  buildHelp.py  entities.ts  requirements.txt
pages/: _app.tsx  _document.tsx  index.tsx
scripts/: build.sh  dev.sh
(+81 files in other folders)
