[tool.poetry]
name = "hprc-data-explorer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.0.1"
pandas = "2.2.2"
requests = "2.32.3"
linkml = "^1.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
